content overflow fix, home layout fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,11 +8,11 @@
   background-size: cover; /* Covers the entire div */
   background-position: center; /* Centers the image */
   background-repeat: no-repeat; /* Prevents repetition */
-  position: relative;
 
-  .container{
+  .text-content {
     position: relative;
     z-index: 2;
+    align-items: center;
   }
 }
 .overlay {
@@ -22,7 +22,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.38); /* semi-transparent dark overlay */
-  z-index: 1;
+  z-index: 0;
 }
 .profile-man{
   width: 100%;
@@ -32,8 +32,21 @@
   background-position: center; /* Centers the image */
   background-repeat: no-repeat; /* Prevents repetition */
   position: absolute;
-  top: 4%;
+  bottom: 0;
   right: -30%;
+  z-index: 1;
+}
+
+@media (max-width: 575.98px) {
+  .top-info{
+    height: 55vh;
+    .text-content {
+      align-items: flex-start;
+    }
+  }
+  .profile-man{
+    height: 60%; // Smaller min-height for mobile
+  }
 }
 
 .line{
@@ -117,6 +130,5 @@
       }
   }
   }
-  
 }
 
